--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Need to ask user for data collection and adjust app visuals
        console.log("This file last modified  " + docMod);
 	
 	var arr = new Array();
+	var dB = 0.091;
 	
 	
 	function buttonChange(Idnum, color, result, arr) {
@@ -65,7 +66,7 @@ Need to ask user for data collection and adjust app visuals
 	}
 	 
 	
-	function decibel(freq, decibel,ear){
+	function decibel(freq, ear){
 	let audioCtx = new AudioContext()
 
 	// Create nodes
@@ -74,12 +75,12 @@ Need to ask user for data collection and adjust app visuals
 
 	// Set parameters
 	osc.frequency.value = freq
-	gain.gain.value = decibel
+	gain.gain.value = dB
 	
 	// Schedule parameter changes
 	
 	// Drop to -12 dBFS at ~1s
-	gain.gain.setValueAtTime(decibel, 1 - 0.03);
+	gain.gain.setValueAtTime(dB, 1 - 0.03);
 	gain.gain.linearRampToValueAtTime(dBFSToGain(-70), 3) //changed gain 
 		
 	//Creating Stereo Panner to Output on L Headphone
@@ -99,16 +100,17 @@ Need to ask user for data collection and adjust app visuals
 	osc.stop(audioCtx.currentTime + 2)
 	}
 	
-	function getSofter(){
-		var softerDecibel = parseInt(gain.gain.value) - 0.091;
-		gain.gain.value = softerDecibel;
+function getSofter(){
+		/* var softerDecibel = parseInt(gain.gain.value) - 0.091;
+		gain.gain.value = softerDecibel; */
+        dB = dB - 0.091;
 	}
 	
 	function getLouder(){
-		var louderDecibel = parseInt(gain.gain.value) + 0.091;
-		gain.gain.value = louderDecibel;
+		/* var louderDecibel = parseInt(gain.gain.value) + 0.091;
+		gain.gain.value = louderDecibel; */
+        dB = dB + 0.091;
 	}
-	
 	
 	
 </script>
@@ -209,11 +211,11 @@ Need to ask user for data collection and adjust app visuals
 	
 <br>
 <p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
-	<button id="button1" onclick="decibel(125,0.091,-1);" class="w3-btn w3-black"> Play Sound </button>
+	<button id="button1" onclick="decibel(125,-1);" class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
-	<button id="button2" onclick="decibel(125,0.182,-1);" class="w3-btn w3-black"> Softer </button>
-	<button id="button3" onclick="decibel(125,0.182,-1);" class="w3-btn w3-black"> Louder </button>
+	<button id="button2" onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
+	<button id="button3" onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	
 <p> What is the lowest level where you could hear the noise? </p> 
 <!--BUTTONS-->
