Adding Alert to tell dB

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@ function getSofter(){
         dB = dB + 0.091;
 	}
 	
+	 function showdB(){
+    alert("Decibel level is:" + dB.toString());
+    console.log("Decibel level is:" + dB.toString());
+    }
+	
+	
 	
 </script>
 <style>	
