Comment out troublesome line of code

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ Need to ask user for data collection and adjust app visuals
 	// Schedule start and stop
 	//osc.start()
 		osc.start(0)
-		panNode.gain.exponentialRampToValueAtTime(
- 		0.00001, context.currentTime + 5)
+		/* panNode.gain.exponentialRampToValueAtTime(
+ 		0.00001, context.currentTime + 5) */
 	osc.stop(audioCtx.currentTime + 2)
 	}
 	
