Changing 1st page to simple layout and setup for captureData

--- a/index.html
+++ b/index.html
@@ -232,23 +232,7 @@ function showdB(){
 	<button id="button2" onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button id="button3" onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	
-<p> What is the lowest level where you could hear the noise? </p> 
-<!--BUTTONS-->
-	<button id="button12" onclick="buttonChange(12,'w3-btn w3-flat-belize-hole',10, arr);" class="w3-btn w3-black"> 1 </button> <!--button plays a 125 Hz sound at 10 dB-->
-   	<button id="button13" onclick="buttonChange(13,'w3-btn w3-flat-belize-hole',20, arr);" class="w3-btn w3-black"> 2 </button> <!--button plays a 125 Hz sound at 20 dB-->
-   	<button id="button14" onclick="buttonChange(14,'w3-btn w3-flat-belize-hole',30, arr);" class="w3-btn w3-black"> 3 </button> <!--button plays a 125 Hz sound at 30 dB-->
-	<button id="button15" onclick="buttonChange(15,'w3-btn w3-flat-belize-hole',40, arr);" class="w3-btn w3-black"> 4 </button> <!--button plays a 125 Hz sound at 40 dB-->
-	<button id="button16" onclick="buttonChange(16,'w3-btn w3-flat-belize-hole',50, arr);" class="w3-btn w3-black"> 5 </button> <!--button plays a 125 Hz sound at 50 dB-->
-	<button id="button17" onclick="buttonChange(17,'w3-btn w3-flat-belize-hole',60, arr);" class="w3-btn w3-black"> 6 </button> <!--button plays a 125 Hz sound at 60 dB-->
-	<button id="button18" onclick="buttonChange(18,'w3-btn w3-flat-belize-hole',70, arr);" class="w3-btn w3-black"> 7 </button> <!--button plays a 125 Hz sound at 70 dB-->
-	<button id="button19" onclick="buttonChange(19,'w3-btn w3-flat-belize-hole',80, arr);" class="w3-btn w3-black"> 8 </button> <!--button plays a 125 Hz sound at 80 dB-->
-	<button id="button20" onclick="buttonChange(20,'w3-btn w3-flat-belize-hole',90, arr);" class="w3-btn w3-black"> 9 </button> <!--button plays a 125 Hz sound at 90 dB-->
-	<button id="button21" onclick="buttonChange(21,'w3-btn w3-flat-belize-hole',100, arr);" class="w3-btn w3-black"> 10 </button> <!--button plays a 125 Hz sound at 100 dB-->
-	<button id="button22" onclick="buttonChange(22,'w3-btn w3-flat-belize-hole',110, arr);" class="w3-btn w3-black"> 11 </button> <!--button plays a 125 Hz sound at 110 dB-->
-	
-	<p> Where were you able to hear the sound? </p> 
-	<button id="button23" onclick= "buttonChange(23,'w3-btn w3-flat-belize-hole');" class="w3-btn w3-black"> Left </button><!--button adds one to yes count-->	
-	<button id="button24" onclick= "buttonChange(24,'w3-btn w3-flat-belize-hole');" class="w3-btn w3-black"> Right </button><!--button adds one to no count-->
+<p> Click the button below to move to the next page and collect your data. </p> 
 	<br>
 	<br>
 	<a href="#125R" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
