Get Next button working -> button to a

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function showdB(){
 	<br>
 <p> Click the button below to move to the next page and collect your data. </p> 
 	<br>
-	<button href="#125R" class="w3-btn w3-black"> Next </button> <!--button to take user to the next page-->	
+	<a href="#125R" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
     	</div>
 	
 	
@@ -261,7 +261,7 @@ function showdB(){
 	<br>
 <p> Click the button below to move to the next page and collect your data. </p> 
 	<br>	
-	<button href="#500L" class="w3-btn w3-black"> Next </button> <!--button to take user to the next page-->	
+	<a href="#500L" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
 	</div>	
 
 
@@ -288,7 +288,7 @@ function showdB(){
 	<br>
 <p> Click the button below to move to the next page and collect your data. </p> 
 	<br>
-	<button href="#Results" class="w3-btn w3-black"> Next </button> <!--button to take user to the next page-->	
+	<a href="#Results" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
     	</div>
 	
 	
