Trying to bring sound back

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@ Need to ask user for data collection and adjust app visuals
        alert("This file last modified  " + docMod);
        console.log("This file last modified  " + docMod);
 	
-	var arr = new Array();
 	var dB = 0.091;
 	var pageNum = 0;
 	
-	string[][] arr = new String[13][2]; //Collumns are hz, which ear, and at what dB level it is heard by user
+	String[][] arr = new String[13][2]; //Collumns are hz, which ear, and at what dB level it is heard by user
 	
 	  
     function initArray(){   //Sets starting values for array
