--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function collectData(){
 	<h1>Audiogram Test</h1>
 </div>
 	
-<div onload= "initarray();" id="content" class="w3-container">
+<div onload= "initArray();" id="content" class="w3-container">
 	<p>This audiogram exam will help find out if you may have hearing loss and help to tell you the extent of your hearing loss. In order to perform this exam, 
 	follow all of the instructions listed below: </p>
 	<p> 1. Try to take this test in as quiet of an environment as possible for optimal results. </p>
