Bringing array into onclick

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ function collectData(){
 	<br>
 <p> Click the button below to move to the next page and collect your data. </p> 
 	<br>
-	<a href="#125R" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
+	<a href="#125R" onclick= "collectData();" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
     	</div>
 	
 	
@@ -288,7 +288,7 @@ function collectData(){
 	<br>
 <p> Click the button below to move to the next page and collect your data. </p> 
 	<br>	
-	<a href="#500L" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
+	<a href="#500L" onclick= "collectData();" class="w3-btn w3-black"> Next </a> <!--button to take user to the next page-->	
 	</div>	
 
 
