Adjusting Instructions on how to use app

--- a/index.html
+++ b/index.html
@@ -334,10 +334,11 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(125,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -359,10 +360,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
  
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(125,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -382,10 +384,11 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(250,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -405,10 +408,11 @@ function toggleDataSeries(e) {
 <div id="content" class="w3-container">
 	
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(250,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -428,10 +432,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(500,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -451,10 +456,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(500,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -475,10 +481,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(1000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -498,10 +505,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(1000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -521,10 +529,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(2000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -545,10 +554,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(2000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -569,10 +579,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(4000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -593,10 +604,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(4000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -617,10 +629,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(8000,-1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
@@ -641,10 +654,11 @@ function toggleDataSeries(e) {
     	<div id="content" class="w3-container">
 		
 <br>
-<p> Click the buttons below to hear the frequency. Starting at "1", click the next button until you can hear a noise. Once you hear the first noise, do not keep increasing the volume level and answer the next questions. If you need to hear the noise again, simply click the buttons again </p>
+<p> Click the button below to hear the frequency. Adjust it to the quietest level you are able to hear the sound. </p>
 	<button onclick="decibel(8000,1); showdB(); " class="w3-btn w3-black"> Play Sound </button>
 	<br>
 	<br>
+<p> Use the buttons below to adjust the button above by making it louder or quieter.  </p>
 	<button onclick="getSofter();" class="w3-btn w3-black"> Softer </button>
 	<button onclick="getLouder();" class="w3-btn w3-black"> Louder </button>
 	<br>
