Setting interval on y-axis

--- a/index.html
+++ b/index.html
@@ -187,13 +187,14 @@ function makeAudiogram() {
   maximum: 8000,
  },
 
-	axisY:[{
-		title: "Volume",
-		includeZero: true,
-        reversed: true,
-		suffix: "dB",
-		minimum: 0,
- 		maximum: 110,
+     axisY:[{
+  title: "Volume",
+  includeZero: true,
+  reversed: true,
+  suffix: "dB",
+  minimum: 0,
+  maximum: 110,
+  interval: 10,
 	},
 	{
 		title: "Hearing Loss",
