Calibration step instructions

--- a/index.html
+++ b/index.html
@@ -307,18 +307,20 @@ function toggleDataSeries(e) {
 	follow all of the instructions listed below: </p>
 	<p> 1. Try to take this test in as quiet of an environment as possible for optimal results. </p>
 	<p> 2. This exam must be used with headphones in order to detect changes in the left/right ear. Use the highest quality of headphones that you have to take this test. </p>
-	<p> 3. Turn your device's volume to the maximum volume setting. The app will not play sounds as loud as the device's full amplitude, but uses this as a scale to calibrate accurate decibel outputs. </p>
+	<p> 3. Use the audio play bar below to calibrate your device's master volume to an appropriate level to take this test. </p>
 	 <a href="#125L" class="w3-btn w3-grey w3-round" onclick= "initArray();" > Get Started </a>
-	<br> 
 	<br>
+	<br>
+	<br> 
+	<p> After pressing play and listening to the audiofile below, remove your headphones and try to replicate the sound you hear by pressing your hands firmly against one another in front of your nose and rubbing them together quickly. </p>
+	<p> Adjust the volume of your computer until the volume of the audiofile through your headphones matches the volume you create with your hands. </p>
+	<p style="color:#FF0000";> Once you have calibrated your device to where both sounds match, DO NOT ADJUST your volume for the remainder of the test </p>
 	<br>
 	<audio controls>
  		<source src="Rubbing-Hands-Together-A3-www.fesliyanstudios.com.mp3" type="audio/mpeg">
 	</audio>
 	<br>
 	<br> 
-	<br>
-	<br>
 	<br>
 	<br>
 	<br>
